--- a/gcmclient/build.gradle
+++ b/gcmclient/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 22
-    buildToolsVersion "21.1.2"
+    buildToolsVersion "22.0.1"
 
     defaultConfig {
-        //applicationId "com.carpediam.timkao.gcm"
+        applicationId "com.carpediam.timkao.gcmclient"
         minSdkVersion 10
         targetSdkVersion 22
         versionCode 1
@@ -20,8 +20,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.0.0'
-    //compile "com.google.android.gms:play-services:3.1.+"
-    compile "com.google.android.gms:play-services:6.5.87"
+    compile project(':app')
 }
